--- a/src/components/datepicker/_ui-datepicker.scss
+++ b/src/components/datepicker/_ui-datepicker.scss
@@ -4,6 +4,10 @@
   $measure: .6rem 0;
 
   @include flex(center, center, nowrap);
+  
+  > .ui-textfield {
+    width: 100%;
+  }
 
   > .ui-popover {
   
