scroll design fix

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,3 +14,5 @@
 @import '../components/card/ui-card';
 @import '../components/box/ui-box';
 @import '../components/scrollContainer/ui-scroll-container';
+
+@import '../layouts/grid/grid';
