--- a/src/components/scrollContainer/_ui-scroll-container.scss
+++ b/src/components/scrollContainer/_ui-scroll-container.scss
@@ -17,16 +17,17 @@
       pointer-events: all;
 
       > button {
-        @include border(9999px);
         position: relative;
         background-color: #00aa00;
       }
     }
 
+    $scroll-size: .5rem;
+
     > .vertical {
-      width: 1rem;
+      width: $scroll-size;
       height: 100%;
-      left: calc(100% - 1rem);
+      left: calc(100% - $scroll-size);
 
       > button {
         width: 100%;
@@ -36,8 +37,8 @@
 
     > .horizontal {
       width: 100%;
-      height: 1rem;
-      top: calc(100% - 1rem);
+      height: $scroll-size;
+      top: calc(100% - $scroll-size);
 
       > button {
         height: 100%;
